--- a/russell_data.rmd
+++ b/russell_data.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Statistical Analyses for Brigette Haram Lake Russell data"
+title: "Statistical Analyses for Brigette Haram Lake Thurmond data"
 output:
 #  pdf_document:
 #    toc: yes
