--- a/russell_data.rmd
+++ b/russell_data.rmd
@@ -115,10 +115,13 @@ pvalues.birddensity <- rep(NA, 1000)
 for(i in 1:1000){
   nohydrilla.birddensity <- lr.nohydrilla$Bird.ha
   hydrilla.birddensity <- sample(lr.hydrilla$Bird.ha,size=22)
+  delta.birddensity <- hydrilla.birddensity - nohydrilla.birddensity
+  hydrilla_greater <- length(which(delta.birddensity>0))
   #exact suppresses error warnings
-  x <- wilcox.test(nohydrilla.birddensity, hydrilla.birddensity,paired=TRUE,exact=FALSE)$p.value
-  y <- SIGN.test(nohydrilla.birddensity, hydrilla.birddensity, md = 0, alternative = "two.sided", conf.level = 0.95)
-  pvalues.birddensity[i] <- x
+  #x <- wilcox.test(nohydrilla.birddensity, hydrilla.birddensity,paired=TRUE,exact=FALSE)$p.value
+  #y <- SIGN.test(nohydrilla.birddensity, hydrilla.birddensity, md = 0, alternative = "two.sided", conf.level = 0.95)
+  x <- binom.test(hydrilla_greater,22,p=0.5,alternative="two.sided",conf.level=0.95)
+  pvalues.birddensity[i] <- x$p.value
 }
 hist(pvalues.birddensity)
 paste("median = ", median(pvalues.birddensity))
@@ -129,11 +132,12 @@ for(i in 1:1000){
   nohydrilla.birdabundance <- lr.nohydrilla$Species.ha
   hydrilla.birdabundance <- sample(lr.hydrilla$Species.ha,size=22)
   delta.birdabundance <- hydrilla.birdabundance - nohydrilla.birdabundance
+  hydrilla_greater <- length(which(delta.birdabundance>0))
   #exact suppresses error warnings
   #z <- wilcox.test(nohydrilla.birdabundance, hydrilla.birdabundance,paired=TRUE,exact=FALSE)$p.value
   #y <- SIGN.test(nohydrilla.birdabundance, hydrilla.birdabundance, md = 0, alternative = "two.sided", conf.level = 0.95)
-  x <- binom.test(18,22,p=0.5,alternative="two.sided",conf.level=0.95)
-  pvalues.birdabundance[i] <- x
+  x <- binom.test(hydrilla_greater,22,p=0.5,alternative="two.sided",conf.level=0.95)
+  pvalues.birdabundance[i] <- x$p.value
 }
 hist(pvalues.birdabundance)
 paste("median = ", median(pvalues.birdabundance))
